--- a/package.json
+++ b/package.json
@@ -1,24 +1,56 @@
 {
-  "name": "typescript",
-  "version": "1.0.0",
-  "description": "This an example of using esptool-js with parcel and typescript",
-  "source": "src/index.html",
-  "scripts": {
-    "genDocs": "cd ../.. && npm run genDocs && mkdir -p examples/typescript/dist && cp -r docs examples/typescript/dist && cd examples/typescript",
-    "dev": "npm run genDocs && parcel src/index.html",
-    "build": "npm run clean && npm run genDocs && parcel build src/index.html --no-optimize --public-url ./",
-    "clean": "rimraf dist .parcel-cache",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "parcelIgnore": [
-    "./docs/.+"
+  "name": "esptool-js",
+  "version": "0.3.2",
+  "module": "lib/index.js",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
+  "license": "Apache-2.0",
+  "files": [
+    "lib",
+    "bundle.js"
   ],
-  "author": "",
-  "license": "ISC",
+  "scripts": {
+    "build": "npm run clean && tsc && rollup --config",
+    "clean": "rimraf lib bundle.js .parcel-cache",
+    "format": "prettier --write \"src/**/*.ts\"",
+    "genDocs": "rimraf docs && typedoc",
+    "lint": "eslint . --ext .ts",
+    "lintAndFix": "eslint . --ext .ts --fix",
+    "prepare": "npm run build",
+    "test": "echo \"Error: no test specified\"",
+    "prepublishOnly": "npm run test && npm run lint"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/espressif/esptool-js.git"
+  },
+  "bugs": {
+    "url": "https://github.com/espressif/esptool-js/issues"
+  },
+  "dependencies": {
+    "pako": "^2.1.0",
+    "tslib": "^2.4.1"
+  },
   "devDependencies": {
-    "parcel": "^2.8.3",
-    "parcel-resolver-ignore": "^2.1.5",
-    "rimraf": "^4.1.2",
-    "typescript": "^4.9.4"
+    "@rollup/plugin-babel": "^6.0.2",
+    "@rollup/plugin-commonjs": "^23.0.2",
+    "@rollup/plugin-json": "^6.0.0",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-terser": "^0.1.0",
+    "@types/pako": "^2.0.0",
+    "@types/w3c-web-serial": "^1.0.3",
+    "@typescript-eslint/eslint-plugin": "^5.43.0",
+    "@typescript-eslint/parser": "^5.43.0",
+    "babel-loader": "^9.1.0",
+    "buffer": "^5.7.1",
+    "eslint": "^8.28.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-jsdoc": "^46.4.5",
+    "eslint-plugin-prettier": "^4.2.1",
+    "prettier": "^2.7.1",
+    "rimraf": "^3.0.2",
+    "rollup": "^3.3.0",
+    "typedoc": "^0.25.2",
+    "typescript": "^4.8.4"
   }
 }
